--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +20,7 @@
         }
 
 
+
         body {
             font-family: 'VT323', monospace;
             background-color: #0a0a0a;
@@ -30,6 +32,7 @@
         }
 
 
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -39,6 +42,7 @@
         }
 
 
+
         h1 {
             font-size: clamp(2rem, 8vw, 3rem);
             text-align: center;
@@ -46,7 +50,10 @@
             color: #ffffff;
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
             word-wrap: break-word;
+            opacity: 0;
+            animation: titleFadeIn 2s ease-out 0.5s forwards;
         }
+
 
 
         h2 {
@@ -56,7 +63,11 @@
             border-bottom: 2px solid #333;
             padding-bottom: 0.5rem;
             word-wrap: break-word;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: textSlideIn 1.5s ease-out forwards;
         }
+
 
 
         h3 {
@@ -64,7 +75,11 @@
             margin: 2rem 0 1rem 0;
             color: #aaaaaa;
             word-wrap: break-word;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: textSlideIn 1.5s ease-out forwards;
         }
+
 
 
         p {
@@ -73,7 +88,11 @@
             text-align: justify;
             word-wrap: break-word;
             hyphens: auto;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: textSlideIn 1.5s ease-out forwards;
         }
+
 
 
         .intro {
@@ -81,7 +100,11 @@
             margin-bottom: 2rem;
             text-align: center;
             color: #dddddd;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: textSlideIn 1.5s ease-out forwards;
         }
+
 
 
         .back-button {
@@ -99,7 +122,11 @@
             margin-top: 1.5rem;
             backdrop-filter: blur(2px);
             -webkit-backdrop-filter: blur(2px);
+            opacity: 0;
+            transform: translateY(20px);
+            animation: textSlideIn 1.5s ease-out forwards;
         }
+
 
 
         .back-button:hover {
@@ -110,16 +137,19 @@
         }
 
 
+
         .back-button:active {
             transform: translateY(0);
             box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1);
         }
 
 
+
         .button-container {
             text-align: center;
             margin-top: 2rem;
         }
+
 
 
         .star-field {
@@ -134,6 +164,7 @@
         }
 
 
+
         .pixel {
             position: absolute;
             width: 3px;
@@ -145,11 +176,13 @@
         }
 
 
+
         @keyframes twinkle {
             from {
                 opacity: 0.2;
                 transform: scale(1);
             }
+
 
 
             to {
@@ -158,10 +191,75 @@
             }
         }
 
+        @keyframes titleFadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes textSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
         .section {
             margin-bottom: 4rem;
         }
+
+        .section:nth-child(2) h2,
+        .section:nth-child(2) p {
+            animation-delay: 0.8s;
+        }
+
+        .section:nth-child(3) h2,
+        .section:nth-child(3) p {
+            animation-delay: 1.0s;
+        }
+
+        .section:nth-child(4) h2,
+        .section:nth-child(4) p {
+            animation-delay: 1.2s;
+        }
+
+        .section:nth-child(5) h2,
+        .section:nth-child(5) p {
+            animation-delay: 1.4s;
+        }
+
+        .section:nth-child(6) h2,
+        .section:nth-child(6) p {
+            animation-delay: 1.6s;
+        }
+
+        .section:nth-child(7) h2,
+        .section:nth-child(7) p,
+        .section:nth-child(7) h3 {
+            animation-delay: 1.8s;
+        }
+
+        .section:nth-child(8) h2,
+        .section:nth-child(8) p {
+            animation-delay: 2.0s;
+        }
+
+        .section:nth-child(9) p,
+        .section:nth-child(9) .back-button {
+            animation-delay: 2.2s;
+        }
+
 
 
         @media screen and (max-width: 768px) {
@@ -171,9 +269,11 @@
             }
 
 
+
             h1 {
                 margin-bottom: 2rem;
             }
+
 
 
             h2 {
@@ -181,9 +281,11 @@
             }
 
 
+
             h3 {
                 margin: 1.5rem 0 0.8rem 0;
             }
+
 
 
             p {
@@ -193,9 +295,11 @@
             }
 
 
+
             .intro {
                 margin-bottom: 1.5rem;
             }
+
 
 
             .section {
@@ -203,10 +307,12 @@
             }
 
 
+
             .pixel {
                 width: 2px;
                 height: 2px;
             }
+
 
 
             .back-button {
@@ -216,6 +322,7 @@
         }
 
 
+
         @media screen and (min-width: 769px) and (max-width: 1024px) {
             .container {
                 padding: 30px 25px;
@@ -223,10 +330,12 @@
             }
 
 
+
             p {
                 line-height: 1.65;
             }
         }
+
 
 
         @media screen and (min-width: 1200px) {
@@ -236,10 +345,12 @@
             }
 
 
+
             .section {
                 margin-bottom: 5rem;
             }
         }
+
 
 
         @media screen and (min-width: 1400px) {
@@ -249,10 +360,12 @@
         }
 
 
+
         @media screen and (max-width: 896px) and (orientation: landscape) {
             .container {
                 padding: 15px 20px;
             }
+
 
 
             h1 {
@@ -260,10 +373,12 @@
             }
 
 
+
             .section {
                 margin-bottom: 2rem;
             }
         }
+
 
 
         @media (-webkit-min-device-pixel-ratio: 2),
@@ -275,6 +390,7 @@
         }
 
 
+
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: #0a0a0a;
@@ -282,16 +398,28 @@
         }
 
 
+
         @media (prefers-reduced-motion: reduce) {
             .pixel {
                 animation: none;
             }
 
+            h1,
+            h2,
+            h3,
+            p,
+            .intro,
+            .back-button {
+                animation: none !important;
+                opacity: 1 !important;
+                transform: none !important;
+            }
 
             .back-button {
                 transition: none;
             }
         }
+
 
 
         @media print {
@@ -300,15 +428,18 @@
             }
 
 
+
             .back-button {
                 display: none;
             }
+
 
 
             body {
                 background: white;
                 color: black;
             }
+
 
 
             h1,
@@ -322,12 +453,15 @@
 </head>
 
 
+
 <body>
     <div class="star-field" id="starField"></div>
 
 
+
     <div class="container">
         <h1>The Mind Behind</h1>
+
 
 
         <div class="section">
@@ -336,9 +470,11 @@
                 but necessity.</p>
 
 
+
             <p>I had always been drawn to philosophy's shadows, to words that heal invisible wounds. People found solace
                 in conversations with me, drawn to something unnamed, perhaps darkness transformed into light for their
                 benefit. Their gratitude became my burden, their healing my purpose.</p>
+
 
 
             <p>Then came the catalyst: the 2A Plus by Nothing. Its widgets contained forgotten wisdom. Profound thoughts
@@ -346,9 +482,11 @@
                 dark enough to retrieve it.</p>
 
 
+
             <p>I began in silence, posting thoughts that cut through existence's noise. Each post rebelled against
                 meaningless chatter drowning modern souls. Slowly, deliberately, I learned creation: reels with weight,
                 content that mattered.</p>
+
 
 
             <p>Surface-level inspiration wasn't enough. I built something deeper: a website where the GT family: those
@@ -357,8 +495,10 @@
                 platform interactions.</p>
 
 
+
             <p>Currently: expanding Stoic philosophy and interactive technology intersections, building tools making
                 ancient wisdom accessible to minds drowning in digital noise.</p>
+
 
 
             <p>Three principles guide this work: Community: bound not by comfort but shared truth pursuit.
@@ -367,9 +507,11 @@
                 others avoid.</p>
 
 
+
             <p>When not coding or curating, I explore philosophical texts most fear, seeking ways to challenge and
                 elevate followers.</p>
         </div>
+
 
 
         <div class="section">
@@ -381,10 +523,12 @@
         </div>
 
 
+
         <div class="section">
             <h2>Vision</h2>
             <p>GlyphThoughts creates what the world lacks: where ancient wisdom meets modern capability, where
                 depth-seekers find it uncompromised.</p>
+
 
 
             <p>This isn't typical motivational content designed to make you feel better. This is wisdom crafted to make
@@ -392,13 +536,16 @@
                 because true growth is individual. What transforms one soul may leave another unchanged.</p>
 
 
+
             <p>The mission evolves, as it must. What began as posts becomes something greater: a global network of minds
                 unafraid to explore human existence's darker corners, finding light not by avoiding shadows, but
                 understanding them.</p>
 
 
+
             <p>Welcome to the GT family. Here, growth isn't gentle.</p>
         </div>
+
 
 
         <div class="section">
@@ -407,20 +554,25 @@
                 websites. They're digital experiences crafted to challenge, inspire, transform.</p>
 
 
+
             <p>Each serves purpose: interactive philosophical exercises challenging assumptions, coding tutorials
                 merging technical skill with deeper thinking, community spaces where authentic discourse replaces
                 shallow engagement. These aren't portfolio pieces. They're transformation instruments.</p>
+
 
 
             <p>Built from darkness, hosted in light. Every code line serves purpose deeper than functionality. Explore
                 what happens when ancient wisdom meets modern implementation.</p>
 
 
+
             <p>View live experiences and examine foundations: all code transparent, methods revealed.</p>
+
 
 
             <p>[Your GitHub repository links here]</p>
         </div>
+
 
 
         <div class="section">
@@ -428,13 +580,16 @@
             <p>For direct dialogue, discourse cutting deeper than comments and forms. The GT family extends beyond
                 platforms, into spaces where real conversation lives.</p>
 
+
             <p>Reach through the shadows via Instagram DMs for immediate discourse, or compose deeper reflections
                 through <a href="mailto:glyphthoughts@gmail.com"
                     style="color: #ffffff; text-decoration: underline;">email</a> where thoughts can unfold without
                 platform constraints.</p>
 
+
             <p>Choose your medium. Both paths lead to authentic exchange beyond surface interactions.</p>
         </div>
+
 
 
         <div class="section">
@@ -442,9 +597,11 @@
             <p>For those seeking clarity before diving deeper into shadows.</p>
 
 
+
             <h3>What is the GT family?</h3>
             <p>Not followers or subscribers: family. Those understanding growth requires discomfort, that wisdom lives
                 between easy answers. We're bound by shared truth pursuit, not comfort.</p>
+
 
 
             <h3>Why the dark tone?</h3>
@@ -452,9 +609,11 @@
                 is. We explore what others avoid because authentic growth lives there.</p>
 
 
+
             <h3>How is this different from typical motivational content?</h3>
             <p>Most motivational content makes you feel better. This makes you think deeper. We don't offer comfort. We
                 offer tools for those brave enough to question never-examined beliefs.</p>
+
 
 
             <h3>What should I expect from GlyphThoughts projects?</h3>
@@ -462,9 +621,11 @@
                 interactions dominating digital spaces.</p>
 
 
+
             <h3>Why isn't this page fancy like other websites?</h3>
             <p>This page was also created as a project (link: [I'll add link]). I wanted simplicity and minimalism,
                 purely for knowing about me and the work. Complexity serves no one when substance is the goal.</p>
+
 
 
             <p>Fancy designs are distractions: animations serving ego over understanding, graphics competing with
@@ -472,13 +633,16 @@
                 loading, clearer focus, no unnecessary mobile navigation noise.</p>
 
 
+
             <p>Design mirrors GlyphThoughts philosophy: stripping superfluity to reveal essence. Eliminating decoration
                 gives remaining elements more weight. This isn't about lacking resources or skill; it's choosing
                 substance over spectacle. Content should challenge thinking, not patience.</p>
 
 
+
             <p>True sophistication lies not in additions, but knowing what to remove. This page conveys information and
                 facilitates connection: anything beyond interferes with that goal.</p>
+
 
 
             <h3>Is this suitable for everyone?</h3>
@@ -488,14 +652,17 @@
                 truths, undergo uncomfortable genuine change, welcome.</p>
 
 
+
             <h3>Have a Question Not Listed Here?</h3>
             <p>Profound inquiries often can't be anticipated. If your question cuts deeper than above, challenges the
                 framework itself, or demands discourse beyond simple answers, reach through Instagram DMs.</p>
 
 
+
             <p>Direct message for genuine inquiry: questions emerging from serious content engagement, not casual
                 curiosity. Ask what others might hesitate to voice.</p>
         </div>
+
 
 
         <div class="section">
@@ -504,10 +671,12 @@
                 but because true innovation requires perspectives I cannot see alone.</p>
 
 
+
             <p>Share what challenges you, what this project lacks, what it could become through Instagram DMs. This
                 isn't for praise or surface feedback. This is for those seeing deeper, thinking harder, daring to
                 suggest what others might fear voicing.</p>
         </div>
+
 
 
         <div class="section">
@@ -515,7 +684,9 @@
                 discomfort. Wisdom demands questioning never-examined beliefs. Proceed accordingly.</p>
 
 
+
             <p class="intro">You've witnessed the origin. The rest is yours to forge.</p>
+
 
 
             <div class="button-container">
@@ -525,11 +696,13 @@
     </div>
 
 
+
     <script>
         function createStars() {
             const starField = document.getElementById('starField');
             const isMobile = window.innerWidth <= 768;
             const isTablet = window.innerWidth <= 1024;
+
 
 
             let starCount = 100;
@@ -540,9 +713,11 @@
             }
 
 
+
             for (let i = 0; i < starCount; i++) {
                 const star = document.createElement('div');
                 star.className = 'pixel';
+
 
 
                 star.style.left = Math.random() * 100 + '%';
@@ -551,9 +726,11 @@
                 star.style.animationDuration = (2 + Math.random() * 4) + 's';
 
 
+
                 starField.appendChild(star);
             }
         }
+
 
 
         function handleResize() {
@@ -563,6 +740,7 @@
         }
 
 
+
         let resizeTimeout;
         function debouncedResize() {
             clearTimeout(resizeTimeout);
@@ -570,10 +748,12 @@
         }
 
 
+
         document.addEventListener('DOMContentLoaded', createStars);
         window.addEventListener('resize', debouncedResize);
     </script>
 </body>
+
 
 
 </html>
