--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 
 
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +23,8 @@
 
 
 
+
+
         body {
             font-family: 'VT323', monospace;
             background-color: #0a0a0a;
@@ -30,6 +34,8 @@
             position: relative;
             min-height: 100vh;
         }
+
+
 
 
 
@@ -43,6 +49,8 @@
 
 
 
+
+
         h1 {
             font-size: clamp(2rem, 8vw, 3rem);
             text-align: center;
@@ -53,6 +61,8 @@
             opacity: 0;
             animation: titleFadeIn 2s ease-out 0.5s forwards;
         }
+
+
 
 
 
@@ -70,6 +80,8 @@
 
 
 
+
+
         h3 {
             font-size: clamp(1.2rem, 4vw, 1.5rem);
             margin: 2rem 0 1rem 0;
@@ -79,6 +91,8 @@
             transform: translateY(20px);
             animation: textSlideIn 1.5s ease-out forwards;
         }
+
+
 
 
 
@@ -95,6 +109,8 @@
 
 
 
+
+
         .intro {
             font-size: clamp(1.1rem, 3.5vw, 1.3rem);
             margin-bottom: 2rem;
@@ -104,6 +120,8 @@
             transform: translateY(20px);
             animation: textSlideIn 1.5s ease-out forwards;
         }
+
+
 
 
 
@@ -129,12 +147,16 @@
 
 
 
+
+
         .back-button:hover {
             background-color: rgba(255, 255, 255, 0.7);
             border-color: rgba(255, 255, 255, 0.9);
             transform: translateY(-2px);
             box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
         }
+
+
 
 
 
@@ -145,10 +167,14 @@
 
 
 
+
+
         .button-container {
             text-align: center;
             margin-top: 2rem;
         }
+
+
 
 
 
@@ -165,6 +191,8 @@
 
 
 
+
+
         .pixel {
             position: absolute;
             width: 3px;
@@ -177,11 +205,15 @@
 
 
 
+
+
         @keyframes twinkle {
             from {
                 opacity: 0.2;
                 transform: scale(1);
             }
+
+
 
 
 
@@ -191,17 +223,23 @@
             }
         }
 
+
+
         @keyframes titleFadeIn {
             from {
                 opacity: 0;
                 transform: translateY(-30px);
             }
 
+
+
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
+
+
 
         @keyframes textSlideIn {
             from {
@@ -209,40 +247,56 @@
                 transform: translateY(20px);
             }
 
+
+
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
 
+
+
         .section {
             margin-bottom: 4rem;
         }
+
+
 
         .section:nth-child(2) h2,
         .section:nth-child(2) p {
             animation-delay: 0.8s;
         }
 
+
+
         .section:nth-child(3) h2,
         .section:nth-child(3) p {
             animation-delay: 1.0s;
         }
+
+
 
         .section:nth-child(4) h2,
         .section:nth-child(4) p {
             animation-delay: 1.2s;
         }
 
+
+
         .section:nth-child(5) h2,
         .section:nth-child(5) p {
             animation-delay: 1.4s;
         }
 
+
+
         .section:nth-child(6) h2,
         .section:nth-child(6) p {
             animation-delay: 1.6s;
         }
+
+
 
         .section:nth-child(7) h2,
         .section:nth-child(7) p,
@@ -250,15 +304,21 @@
             animation-delay: 1.8s;
         }
 
+
+
         .section:nth-child(8) h2,
         .section:nth-child(8) p {
             animation-delay: 2.0s;
         }
 
+
+
         .section:nth-child(9) p,
         .section:nth-child(9) .back-button {
             animation-delay: 2.2s;
         }
+
+
 
 
 
@@ -270,9 +330,13 @@
 
 
 
+
+
             h1 {
                 margin-bottom: 2rem;
             }
+
+
 
 
 
@@ -282,9 +346,13 @@
 
 
 
+
+
             h3 {
                 margin: 1.5rem 0 0.8rem 0;
             }
+
+
 
 
 
@@ -296,9 +364,13 @@
 
 
 
+
+
             .intro {
                 margin-bottom: 1.5rem;
             }
+
+
 
 
 
@@ -308,10 +380,14 @@
 
 
 
+
+
             .pixel {
                 width: 2px;
                 height: 2px;
             }
+
+
 
 
 
@@ -323,6 +399,8 @@
 
 
 
+
+
         @media screen and (min-width: 769px) and (max-width: 1024px) {
             .container {
                 padding: 30px 25px;
@@ -331,10 +409,14 @@
 
 
 
+
+
             p {
                 line-height: 1.65;
             }
         }
+
+
 
 
 
@@ -346,10 +428,14 @@
 
 
 
+
+
             .section {
                 margin-bottom: 5rem;
             }
         }
+
+
 
 
 
@@ -361,10 +447,14 @@
 
 
 
+
+
         @media screen and (max-width: 896px) and (orientation: landscape) {
             .container {
                 padding: 15px 20px;
             }
+
+
 
 
 
@@ -374,10 +464,14 @@
 
 
 
+
+
             .section {
                 margin-bottom: 2rem;
             }
         }
+
+
 
 
 
@@ -391,6 +485,8 @@
 
 
 
+
+
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: #0a0a0a;
@@ -399,10 +495,14 @@
 
 
 
+
+
         @media (prefers-reduced-motion: reduce) {
             .pixel {
                 animation: none;
             }
+
+
 
             h1,
             h2,
@@ -415,10 +515,14 @@
                 transform: none !important;
             }
 
+
+
             .back-button {
                 transition: none;
             }
         }
+
+
 
 
 
@@ -429,9 +533,13 @@
 
 
 
+
+
             .back-button {
                 display: none;
             }
+
+
 
 
 
@@ -439,6 +547,8 @@
                 background: white;
                 color: black;
             }
+
+
 
 
 
@@ -454,13 +564,19 @@
 
 
 
+
+
 <body>
     <div class="star-field" id="starField"></div>
 
 
 
+
+
     <div class="container">
         <h1>The Mind Behind</h1>
+
+
 
 
 
@@ -471,9 +587,13 @@
 
 
 
+
+
             <p>I had always been drawn to philosophy's shadows, to words that heal invisible wounds. People found solace
                 in conversations with me, drawn to something unnamed, perhaps darkness transformed into light for their
                 benefit. Their gratitude became my burden, their healing my purpose.</p>
+
+
 
 
 
@@ -483,9 +603,13 @@
 
 
 
+
+
             <p>I began in silence, posting thoughts that cut through existence's noise. Each post rebelled against
                 meaningless chatter drowning modern souls. Slowly, deliberately, I learned creation: reels with weight,
                 content that mattered.</p>
+
+
 
 
 
@@ -496,8 +620,12 @@
 
 
 
+
+
             <p>Currently: expanding Stoic philosophy and interactive technology intersections, building tools making
                 ancient wisdom accessible to minds drowning in digital noise.</p>
+
+
 
 
 
@@ -508,9 +636,13 @@
 
 
 
+
+
             <p>When not coding or curating, I explore philosophical texts most fear, seeking ways to challenge and
                 elevate followers.</p>
         </div>
+
+
 
 
 
@@ -524,10 +656,14 @@
 
 
 
+
+
         <div class="section">
             <h2>Vision</h2>
             <p>GlyphThoughts creates what the world lacks: where ancient wisdom meets modern capability, where
                 depth-seekers find it uncompromised.</p>
+
+
 
 
 
@@ -537,14 +673,20 @@
 
 
 
+
+
             <p>The mission evolves, as it must. What began as posts becomes something greater: a global network of minds
                 unafraid to explore human existence's darker corners, finding light not by avoiding shadows, but
                 understanding them.</p>
 
 
 
+
+
             <p>Welcome to the GT family. Here, growth isn't gentle.</p>
         </div>
+
+
 
 
 
@@ -555,9 +697,13 @@
 
 
 
+
+
             <p>Each serves purpose: interactive philosophical exercises challenging assumptions, coding tutorials
                 merging technical skill with deeper thinking, community spaces where authentic discourse replaces
                 shallow engagement. These aren't portfolio pieces. They're transformation instruments.</p>
+
+
 
 
 
@@ -566,12 +712,19 @@
 
 
 
+
+
             <p>View live experiences and examine foundations: all code transparent, methods revealed.</p>
 
 
 
-            <p>[Your GitHub repository links here]</p>
+
+
+            <p><a href="https://github.com/glyphthoughts?tab=repositories" target="_blank" rel="noopener"
+                    style="color: #ffffff; text-decoration: underline;">Explore all repositories on GitHub</a></p>
         </div>
+
+
 
 
 
@@ -581,14 +734,20 @@
                 platforms, into spaces where real conversation lives.</p>
 
 
+
+
             <p>Reach through the shadows via Instagram DMs for immediate discourse, or compose deeper reflections
                 through <a href="mailto:glyphthoughts@gmail.com"
                     style="color: #ffffff; text-decoration: underline;">email</a> where thoughts can unfold without
                 platform constraints.</p>
 
 
+
+
             <p>Choose your medium. Both paths lead to authentic exchange beyond surface interactions.</p>
         </div>
+
+
 
 
 
@@ -598,9 +757,13 @@
 
 
 
+
+
             <h3>What is the GT family?</h3>
             <p>Not followers or subscribers: family. Those understanding growth requires discomfort, that wisdom lives
                 between easy answers. We're bound by shared truth pursuit, not comfort.</p>
+
+
 
 
 
@@ -610,9 +773,13 @@
 
 
 
+
+
             <h3>How is this different from typical motivational content?</h3>
             <p>Most motivational content makes you feel better. This makes you think deeper. We don't offer comfort. We
                 offer tools for those brave enough to question never-examined beliefs.</p>
+
+
 
 
 
@@ -622,9 +789,16 @@
 
 
 
+
+
             <h3>Why isn't this page fancy like other websites?</h3>
-            <p>This page was also created as a project (link: [I'll add link]). I wanted simplicity and minimalism,
+            <p>This page was also created as a project (<a
+                    href="https://github.com/glyphthoughts/About-Project-GlpyhThoughts" target="_blank" rel="noopener"
+                    style="color: #ffffff; text-decoration: underline;">GitHub repository</a>). I wanted simplicity and
+                minimalism,
                 purely for knowing about me and the work. Complexity serves no one when substance is the goal.</p>
+
+
 
 
 
@@ -634,14 +808,20 @@
 
 
 
+
+
             <p>Design mirrors GlyphThoughts philosophy: stripping superfluity to reveal essence. Eliminating decoration
                 gives remaining elements more weight. This isn't about lacking resources or skill; it's choosing
                 substance over spectacle. Content should challenge thinking, not patience.</p>
 
 
 
+
+
             <p>True sophistication lies not in additions, but knowing what to remove. This page conveys information and
                 facilitates connection: anything beyond interferes with that goal.</p>
+
+
 
 
 
@@ -653,15 +833,21 @@
 
 
 
+
+
             <h3>Have a Question Not Listed Here?</h3>
             <p>Profound inquiries often can't be anticipated. If your question cuts deeper than above, challenges the
                 framework itself, or demands discourse beyond simple answers, reach through Instagram DMs.</p>
 
 
 
+
+
             <p>Direct message for genuine inquiry: questions emerging from serious content engagement, not casual
                 curiosity. Ask what others might hesitate to voice.</p>
         </div>
+
+
 
 
 
@@ -672,10 +858,14 @@
 
 
 
+
+
             <p>Share what challenges you, what this project lacks, what it could become through Instagram DMs. This
                 isn't for praise or surface feedback. This is for those seeing deeper, thinking harder, daring to
                 suggest what others might fear voicing.</p>
         </div>
+
+
 
 
 
@@ -685,7 +875,11 @@
 
 
 
+
+
             <p class="intro">You've witnessed the origin. The rest is yours to forge.</p>
+
+
 
 
 
@@ -697,11 +891,11 @@
 
 
 
+
+
     <script>
-        // Force scroll to top on page load/refresh
-        window.addEventListener('beforeunload', function () {
-            window.scrollTo(0, 0);
-        });
+        let isNavigating = false;
+
 
         window.addEventListener('load', function () {
             setTimeout(function () {
@@ -709,21 +903,42 @@
             }, 50);
         });
 
-        // Also force scroll to top immediately when DOM loads
+
+
         document.addEventListener('DOMContentLoaded', function () {
             window.scrollTo(0, 0);
             createStars();
         });
 
-        // Additional fallback for browsers that maintain scroll position
+
+
         if (history.scrollRestoration) {
             history.scrollRestoration = 'manual';
         }
+
+
+
+        window.addEventListener('beforeunload', function (e) {
+
+            if (e.returnValue === undefined && !isNavigating) {
+                window.scrollTo(0, 0);
+            }
+        });
+
+
+
+        document.querySelector('.back-button').addEventListener('click', function () {
+            isNavigating = true;
+        });
+
+
 
         function createStars() {
             const starField = document.getElementById('starField');
             const isMobile = window.innerWidth <= 768;
             const isTablet = window.innerWidth <= 1024;
+
+
 
 
 
@@ -736,9 +951,13 @@
 
 
 
+
+
             for (let i = 0; i < starCount; i++) {
                 const star = document.createElement('div');
                 star.className = 'pixel';
+
+
 
 
 
@@ -749,9 +968,13 @@
 
 
 
+
+
                 starField.appendChild(star);
             }
         }
+
+
 
 
 
@@ -763,6 +986,8 @@
 
 
 
+
+
         let resizeTimeout;
         function debouncedResize() {
             clearTimeout(resizeTimeout);
@@ -771,10 +996,11 @@
 
 
 
+
+
         window.addEventListener('resize', debouncedResize);
     </script>
 </body>
-
 
 
 </html>
