--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
 
             <p>View live experiences and examine foundations: all code transparent, methods revealed.</p>
 
-            <p><a href="https://github.com/glyphthoughts?tab=repositories" target="_blank" rel="noopener"
-                    style="color: #ffffff; text-decoration: underline;">Explore all repositories on GitHub</a></p>
+            <p><a href="https://gtprojects.carrd.co" target="_blank" rel="noopener"
+                    style="color: #ffffff; text-decoration: underline;">Explore projects by GlyphThoughts</a></p>
         </div>
 
         <div class="section">
