--- a/index.html
+++ b/index.html
@@ -465,6 +465,10 @@
                 platform constraints.</p>
 
             <p>Choose your medium. Both paths lead to authentic exchange beyond surface interactions.</p>
+            <p>To explore the personal void of the mind behind this work: <a href="https://shaxntanu.carrd.co"
+                    target="_blank" rel="noopener" style="color: #ffffff; text-decoration: underline;">Author's
+                    Abyss</a>.</p>
+
         </div>
 
         <div class="section">
